main_page update
- 메인페이지 슬라이더부터 인천미디어 영역까지 완성했습니다. 메인페이지 레이아웃은 완성되었습니다.
- 스와이퍼 슬라이더가 정상적으로 작동되지 않아 추후 수정할 예정입니다.

--- a/css/common_footer.css
+++ b/css/common_footer.css
@@ -9,6 +9,7 @@ footer {
 /* footer ftop start */
 footer .ftop {
     overflow: hidden;
+    height: 60px;
 }
 
 footer .ftop .item {
@@ -106,11 +107,20 @@ footer .ftop .item .seleted_btn a {
     background: #666;
 }
 
-.fbottom .fb_top .fb_menu ul li a {
+/* fb_menu after display none */
+.fbottom .fb_top .fb_menu ul li:nth-child(3):after,
+.fbottom .fb_top .fb_menu ul li:nth-child(6):after {
+    display: none;
+}
 
+.fbottom .fb_top .fb_menu ul li a {
     font-size: 14px;
     margin: 0 10px;
     line-height: 100px;
+}
+
+.fbottom .fb_top .fb_menu ul li a strong {
+    color: #1c236c;
 }
 
 /* fb_link */
@@ -136,14 +146,29 @@ footer .ftop .item .seleted_btn a {
 }
 
 /* fbottom .info */
-.fb_bottom .info {}
+.fb_bottom {
+    overflow: hidden;
+    height: 80px;
+    line-height: 80px;
+}
 
-.fb_bottom .info span {}
+.fb_bottom .info {
+    float: left;
+}
+
+.fb_bottom .info span {
+    font-size: 13px;
+}
 
 .fb_bottom .info span a {}
 
-.fb_bottom .copyright {}
+/* fb_bottom .copyright */
+.fb_bottom .copyright {
+    float: right;
+}
 
-.fb_bottom .copyright span {}
+.fb_bottom .copyright span {
+    font-size: 13px;
+}
 
 /* footer end */
