sub_html update
1. 새소식 페이지 헤더부분과 푸터부분, 헤더영역 메뉴를 완성시켰습니다.

2. 현재 lnb 부분과 content 부분 진행하고 있습니다. 6월 14일에 진행 중인 부분과 나머지 서브 페이지들을 완성시킬 계획입니다.

3. lnb영역과 타이틀 부분이 공통적인 부분이 많아서 sub_html_common.css에서 진행하고 나머지 세세한 부분을 따로 css파일을 만들어서 진행하겠습니다.

--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,106 @@
 @charset "utf-8";
 
+/* common style */
+.inner {
+    width: 1172px;
+    margin: 0 auto;
+}
+
+/* top btn style */
+.top_btn {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    background: #1c236c;
+    z-index: 200;
+    cursor: pointer;
+}
+
+.top_btn img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 16px;
+}
+
+/* quick_menu start */
+.quick_menu {
+    overflow: hidden;
+    height: 50px;
+    border-bottom: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* quick_menu menu_btn */
+.quick_menu .menu_btn {
+    float: left;
+}
+
+.quick_menu .menu_btn a {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    line-height: 44px;
+    background: #eee;
+}
+
+.quick_menu .menu_btn img {
+    padding-left: 18px;
+}
+
+/* quick_menu logo */
+#logo {
+    float: left;
+    margin-left: 20px;
+}
+
+#logo h1 {
+    line-height: 50px;
+}
+
+#logo h1 a {}
+
+#logo h1 a img {
+    width: 108px;
+    vertical-align: middle;
+    transform: translateY(-11%);
+}
+
+/* quick_menu menu */
+.quick_menu .menu {
+    float: right;
+}
+
+.quick_menu .menu ul {
+    overflow: hidden;
+}
+
+.quick_menu .menu ul li {
+    float: left;
+    border-left: 1px solid #ccc;
+}
+
+.quick_menu .menu ul li:last-child {
+    background: #eee;
+    border-right: 1px solid #ccc;
+}
+
+.quick_menu .menu ul li a {
+    display: inline-block;
+    line-height: 50px;
+    padding: 0 20px;
+}
+
+.quick_menu .menu ul li a img {
+    margin-bottom: 4px;
+}
+
+/* quick_menu end */
+
 /* footer start */
 footer {
     height: 60px;
