--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 /* z-index
 
+.top_btn : 200;
 .swiper_btn_wrap:after : 20;
 
 */
@@ -12,13 +13,6 @@ primary : #1c236c (남색계열)
 hover : #52a4e7; (파랑계열)
 
 */
-
-/* common style */
-.inner {
-    width: 1172px;
-    margin: 0 auto;
-}
-
 
 /* --- header start --- */
 header {}
@@ -233,79 +227,7 @@ header .htop .right .table_wrap:first-child {
 
 /* htop end */
 
-/* hmid start */
-.quick_menu {
-    overflow: hidden;
-    height: 50px;
-    border-bottom: 1px solid #ccc;
-    box-sizing: border-box;
-}
 
-/* hmid menu_btn */
-.quick_menu .menu_btn {
-    float: left;
-}
-
-.quick_menu .menu_btn a {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    line-height: 44px;
-    background: #eee;
-}
-
-.quick_menu .menu_btn img {
-    padding-left: 18px;
-}
-
-/* hmid logo */
-#logo {
-    float: left;
-    margin-left: 20px;
-}
-
-#logo h1 {
-    line-height: 50px;
-}
-
-#logo h1 a {}
-
-#logo h1 a img {
-    width: 108px;
-    vertical-align: middle;
-    transform: translateY(-11%);
-}
-
-/* hmid menu */
-.quick_menu .menu {
-    float: right;
-}
-
-.quick_menu .menu ul {
-    overflow: hidden;
-}
-
-.quick_menu .menu ul li {
-    float: left;
-    border-left: 1px solid #ccc;
-}
-
-.quick_menu .menu ul li:last-child {
-    background: #eee;
-    border-right: 1px solid #ccc;
-}
-
-.quick_menu .menu ul li a {
-    display: inline-block;
-    line-height: 50px;
-    padding: 0 20px;
-}
-
-.quick_menu .menu ul li a img {
-    margin-bottom: 4px;
-}
-
-/* hmid end */
 
 /* hbottom start */
 .hbottom {
