sub_html_update
- 인천광역시 홈페이지의 서브페이지를 완성했습니다.
- 인천소식, 소통참여, 종합민원, 인천소개, 로그인 총 5개의 서브페이지를 제작했습니다.
- 메인페이지 슬라이더 에러는 내일 해결예정 입니다.

--- a/css/initial.css
+++ b/css/initial.css
@@ -35,6 +35,7 @@ a {
 
 img {
     vertical-align: middle;
+    border: none;
 }
 
 input,
@@ -43,6 +44,10 @@ select {
     outline: none;
     border: none;
     background: none;
+}
+
+select::-ms-expand {
+    display: none
 }
 
 address {
